--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "12.6.8",
 		"@types/react": "16.8.23",
 		"@types/react-dom": "16.8.5",
+		"@types/react-router-dom": "^5.1.3",
 		"@types/request": "^2.48.2",
 		"@typescript-eslint/eslint-plugin": "1.6.0",
 		"@typescript-eslint/parser": "1.6.0",
@@ -82,12 +83,25 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"jest": {
-		"collectCoverageFrom": [ "ui/**/*.{js,jsx,ts,tsx}", "!ui/**/*.d.ts" ],
-		"setupFiles": [ "react-app-polyfill/jsdom" ],
+		"collectCoverageFrom": [
+			"ui/**/*.{js,jsx,ts,tsx}",
+			"!ui/**/*.d.ts"
+		],
+		"setupFiles": [
+			"react-app-polyfill/jsdom"
+		],
 		"setupFilesAfterEnv": [],
 		"testMatch": [
 			"<rootDir>/ui/**/__tests__/**/*.{js,jsx,ts,tsx}",
@@ -107,13 +121,31 @@
 			"^react-native$": "react-native-web",
 			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
 		},
-		"moduleFileExtensions": [ "web.js", "js", "web.ts", "ts", "web.tsx", "tsx", "json", "web.jsx", "jsx", "node" ],
-		"watchPlugins": [ "jest-watch-typeahead/filename", "jest-watch-typeahead/testname" ]
+		"moduleFileExtensions": [
+			"web.js",
+			"js",
+			"web.ts",
+			"ts",
+			"web.tsx",
+			"tsx",
+			"json",
+			"web.jsx",
+			"jsx",
+			"node"
+		],
+		"watchPlugins": [
+			"jest-watch-typeahead/filename",
+			"jest-watch-typeahead/testname"
+		]
 	},
 	"babel": {
-		"presets": [ "react-app" ]
+		"presets": [
+			"react-app"
+		]
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"react-router-dom": "^5.1.2"
+	},
 	"_moduleAliases": {
 		"@curses": "ui/_curses-lib/@curses/",
 		"@styles": "ui/_styles/"
