--- a/package.json
+++ b/package.json
@@ -5,48 +5,27 @@
 	"dependencies": {
 		"@babel/core": "7.4.3",
 		"@svgr/webpack": "4.1.0",
-		"@types/jest": "24.0.15",
-		"@types/lodash": "^4.14.136",
-		"@types/node": "12.6.8",
-		"@types/react": "16.8.23",
-		"@types/react-dom": "16.8.5",
-		"@types/react-router-dom": "^5.1.3",
-		"@types/request": "^2.48.2",
-		"@typescript-eslint/eslint-plugin": "1.6.0",
-		"@typescript-eslint/parser": "1.6.0",
 		"babel-eslint": "10.0.1",
-		"babel-jest": "^24.8.0",
+		"babel-jest": "^24.9.0",
 		"babel-loader": "8.0.5",
-		"babel-plugin-named-asset-import": "^0.3.2",
-		"babel-preset-react-app": "^9.0.0",
+		"babel-plugin-named-asset-import": "^0.3.7",
+		"babel-preset-react-app": "^9.1.2",
 		"camelcase": "^5.2.0",
 		"case-sensitive-paths-webpack-plugin": "2.2.0",
 		"cors": "^2.8.5",
 		"css-loader": "2.1.1",
 		"dotenv": "6.2.0",
 		"dotenv-expand": "4.2.0",
-		"eslint": "^5.16.0",
-		"eslint-config-react-app": "^4.0.1",
-		"eslint-loader": "2.1.2",
-		"eslint-plugin-flowtype": "2.50.1",
-		"eslint-plugin-import": "2.16.0",
-		"eslint-plugin-jsx-a11y": "6.2.1",
-		"eslint-plugin-react": "7.12.4",
-		"eslint-plugin-react-hooks": "^1.5.0",
 		"express": "^4.17.1",
 		"file-loader": "3.0.1",
 		"fs-extra": "7.0.1",
 		"html-webpack-plugin": "4.0.0-beta.5",
-		"http-server": "^0.11.1",
+		"http-server": "^0.12.3",
 		"identity-obj-proxy": "3.0.0",
 		"is-wsl": "^1.1.0",
-		"jest": "24.7.1",
-		"jest-environment-jsdom-fourteen": "0.1.0",
-		"jest-resolve": "24.7.1",
-		"jest-watch-typeahead": "0.3.0",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.20",
 		"mini-css-extract-plugin": "0.5.0",
-		"module-alias": "^2.2.1",
+		"module-alias": "^2.2.2",
 		"optimize-css-assets-webpack-plugin": "5.0.1",
 		"pnp-webpack-plugin": "1.2.1",
 		"postcss-flexbugs-fixes": "4.1.0",
@@ -54,22 +33,24 @@
 		"postcss-normalize": "7.0.1",
 		"postcss-preset-env": "6.6.0",
 		"postcss-safe-parser": "4.0.1",
-		"react": "^16.8.6",
-		"react-app-polyfill": "^1.0.1",
-		"react-dev-utils": "^9.0.1",
-		"react-dom": "^16.8.6",
-		"request": "^2.88.0",
+		"react": "^16.14.0",
+		"react-app-polyfill": "^1.0.6",
+		"react-dev-utils": "^9.1.0",
+		"react-dom": "^16.14.0",
+		"react-ga": "^3.3.0",
+		"react-router-dom": "^5.2.0",
+		"request": "^2.88.2",
 		"resolve": "1.10.0",
 		"sass-loader": "7.1.0",
 		"semver": "6.0.0",
 		"style-loader": "0.23.1",
-		"styled-components": "^4.3.2",
-		"terser-webpack-plugin": "1.2.3",
+		"styled-components": "^4.4.1",
+		"terser-webpack-plugin": "^1.4.5",
 		"ts-pnp": "1.1.2",
-		"typescript": "3.5.3",
+		"typescript": "3.9.5",
 		"url-loader": "1.1.2",
 		"webpack": "4.29.6",
-		"webpack-dev-server": "3.2.1",
+		"webpack-dev-server": "^3.11.2",
 		"webpack-manifest-plugin": "2.0.4",
 		"workbox-webpack-plugin": "4.2.0"
 	},
@@ -144,7 +125,27 @@
 		]
 	},
 	"devDependencies": {
-		"react-router-dom": "^5.1.2"
+		"@types/jest": "^24.0.15",
+		"@types/lodash": "^4.14.168",
+		"@types/node": "12.6.8",
+		"@types/react": "16.8.23",
+		"@types/react-dom": "16.8.5",
+		"@types/react-router-dom": "^5.1.7",
+		"@types/request": "^2.48.5",
+		"@typescript-eslint/eslint-plugin": "1.6.0",
+		"@typescript-eslint/parser": "1.6.0",
+		"eslint": "^5.16.0",
+		"eslint-config-react-app": "^4.0.1",
+		"eslint-loader": "2.1.2",
+		"eslint-plugin-flowtype": "2.50.1",
+		"eslint-plugin-import": "2.16.0",
+		"eslint-plugin-jsx-a11y": "6.2.1",
+		"eslint-plugin-react": "7.12.4",
+		"eslint-plugin-react-hooks": "^1.7.0",
+		"jest": "24.7.1",
+		"jest-environment-jsdom-fourteen": "0.1.0",
+		"jest-resolve": "24.7.1",
+		"jest-watch-typeahead": "0.3.0"
 	},
 	"_moduleAliases": {
 		"@curses": "ui/_curses-lib/@curses/",
