--- a/package.json
+++ b/package.json
@@ -2,7 +2,36 @@
 	"name": "curses",
 	"version": "2.0.4",
 	"private": true,
+	"scripts": {
+		"start": "node scripts/start.js",
+		"build": "node scripts/build.js",
+		"deploy": "bash scripts/secret.sh",
+		"build:deploy": "npm run build && npm run deploy",
+		"test": "node scripts/test.js"
+	},
 	"dependencies": {
+		"lodash": "^4.17.20",
+		"react": "^16.14.0",
+		"react-app-polyfill": "^1.0.6",
+		"react-dev-utils": "^9.1.0",
+		"react-dom": "^16.14.0",
+		"react-ga": "^3.3.0",
+		"react-router-dom": "^5.2.0",
+		"request": "^2.88.2",
+		"resolve": "1.10.0",
+		"styled-components": "^4.4.1",
+		"typescript": "3.9.5"
+	},
+	"devDependencies": {
+		"@types/jest": "^24.0.15",
+		"@types/lodash": "^4.14.168",
+		"@types/node": "12.6.8",
+		"@types/react": "16.8.23",
+		"@types/react-dom": "16.8.5",
+		"@types/react-router-dom": "^5.1.7",
+		"@types/request": "^2.48.5",
+		"@typescript-eslint/eslint-plugin": "1.6.0",
+		"@typescript-eslint/parser": "1.6.0",
 		"@babel/core": "7.4.3",
 		"@svgr/webpack": "4.1.0",
 		"babel-eslint": "10.0.1",
@@ -16,6 +45,14 @@
 		"css-loader": "2.1.1",
 		"dotenv": "6.2.0",
 		"dotenv-expand": "4.2.0",
+		"eslint": "^5.16.0",
+		"eslint-config-react-app": "^4.0.1",
+		"eslint-loader": "2.1.2",
+		"eslint-plugin-flowtype": "2.50.1",
+		"eslint-plugin-import": "2.16.0",
+		"eslint-plugin-jsx-a11y": "6.2.1",
+		"eslint-plugin-react": "7.12.4",
+		"eslint-plugin-react-hooks": "^1.7.0",
 		"express": "^4.17.1",
 		"file-loader": "3.0.1",
 		"fs-extra": "7.0.1",
@@ -23,7 +60,10 @@
 		"http-server": "^0.12.3",
 		"identity-obj-proxy": "3.0.0",
 		"is-wsl": "^1.1.0",
-		"lodash": "^4.17.20",
+		"jest": "24.7.1",
+		"jest-environment-jsdom-fourteen": "0.1.0",
+		"jest-resolve": "24.7.1",
+		"jest-watch-typeahead": "0.3.0",
 		"mini-css-extract-plugin": "0.5.0",
 		"module-alias": "^2.2.2",
 		"optimize-css-assets-webpack-plugin": "5.0.1",
@@ -33,32 +73,16 @@
 		"postcss-normalize": "7.0.1",
 		"postcss-preset-env": "6.6.0",
 		"postcss-safe-parser": "4.0.1",
-		"react": "^16.14.0",
-		"react-app-polyfill": "^1.0.6",
-		"react-dev-utils": "^9.1.0",
-		"react-dom": "^16.14.0",
-		"react-ga": "^3.3.0",
-		"react-router-dom": "^5.2.0",
-		"request": "^2.88.2",
-		"resolve": "1.10.0",
 		"sass-loader": "7.1.0",
 		"semver": "6.0.0",
 		"style-loader": "0.23.1",
-		"styled-components": "^4.4.1",
 		"terser-webpack-plugin": "^1.4.5",
 		"ts-pnp": "1.1.2",
-		"typescript": "3.9.5",
 		"url-loader": "1.1.2",
 		"webpack": "4.29.6",
 		"webpack-dev-server": "^3.11.2",
 		"webpack-manifest-plugin": "2.0.4",
 		"workbox-webpack-plugin": "4.2.0"
-	},
-	"scripts": {
-		"start": "node scripts/start.js",
-		"build": "node scripts/build.js",
-		"deploy": "node scripts/build.js && ./scripts/deploy.sh",
-		"test": "node scripts/test.js"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -123,29 +147,6 @@
 		"presets": [
 			"react-app"
 		]
-	},
-	"devDependencies": {
-		"@types/jest": "^24.0.15",
-		"@types/lodash": "^4.14.168",
-		"@types/node": "12.6.8",
-		"@types/react": "16.8.23",
-		"@types/react-dom": "16.8.5",
-		"@types/react-router-dom": "^5.1.7",
-		"@types/request": "^2.48.5",
-		"@typescript-eslint/eslint-plugin": "1.6.0",
-		"@typescript-eslint/parser": "1.6.0",
-		"eslint": "^5.16.0",
-		"eslint-config-react-app": "^4.0.1",
-		"eslint-loader": "2.1.2",
-		"eslint-plugin-flowtype": "2.50.1",
-		"eslint-plugin-import": "2.16.0",
-		"eslint-plugin-jsx-a11y": "6.2.1",
-		"eslint-plugin-react": "7.12.4",
-		"eslint-plugin-react-hooks": "^1.7.0",
-		"jest": "24.7.1",
-		"jest-environment-jsdom-fourteen": "0.1.0",
-		"jest-resolve": "24.7.1",
-		"jest-watch-typeahead": "0.3.0"
 	},
 	"_moduleAliases": {
 		"@curses": "ui/_curses-lib/@curses/",
