--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
 		"lodash": "^4.17.20",
 		"react": "^16.14.0",
 		"react-app-polyfill": "^1.0.6",
-		"react-dev-utils": "^9.1.0",
 		"react-dom": "^16.14.0",
 		"react-ga": "^3.3.0",
 		"react-router-dom": "^5.2.0",
 		"request": "^2.88.2",
 		"resolve": "1.10.0",
-		"styled-components": "^4.4.1",
-		"typescript": "3.9.5"
+		"styled-components": "^4.4.1"
 	},
 	"devDependencies": {
 		"@types/jest": "^24.0.15",
@@ -73,11 +71,13 @@
 		"postcss-normalize": "7.0.1",
 		"postcss-preset-env": "6.6.0",
 		"postcss-safe-parser": "4.0.1",
+		"react-dev-utils": "^9.1.0",
 		"sass-loader": "7.1.0",
 		"semver": "6.0.0",
 		"style-loader": "0.23.1",
 		"terser-webpack-plugin": "^1.4.5",
 		"ts-pnp": "1.1.2",
+		"typescript": "3.9.5",
 		"url-loader": "1.1.2",
 		"webpack": "4.29.6",
 		"webpack-dev-server": "^3.11.2",
